Updated README.md for Eclispe metadata Built w/ Eclipse Mars
git-svn-id: https://www.omgwiki.org/repos/TIWG/Eclipse%20Scala%20Projects/org.omg.oti@445212 b05f3425-8805-43f2-8a1d-5852a8693556